load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ast.go",
        "attr.go",
        "binop.go",
        "build.go",
        "builtin.go",
        "builtins.go",
        "builtinutil.go",
        "context.go",
        "copy.go",
        "debug.go",
        "doc.go",
        "errors.go",
        "eval.go",
        "evaluator.go",
        "export.go",
        "go.go",
        "instance.go",
        "kind.go",
        "lit.go",
        "marshal.go",
        "op.go",
        "rewrite.go",
        "strip.go",
        "subsume.go",
        "types.go",
        "validate.go",
        "value.go",
    ],
    importpath = "cuelang.org/go/cue",
    visibility = ["//visibility:public"],
    deps = [
        "//cue/ast:go_default_library",
        "//cue/build:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//cue/literal:go_default_library",
        "//cue/parser:go_default_library",
        "//cue/token:go_default_library",
        "//internal:go_default_library",
        "//internal/encoding/yaml:go_default_library",
        "//internal/third_party/yaml:go_default_library",
        "@com_github_cockroachdb_apd_v2//:go_default_library",
        "@org_golang_x_net//idna:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ast_test.go",
        "attr_test.go",
        "build_test.go",
        "builtin_test.go",
        "examples_test.go",
        "export_test.go",
        "go_test.go",
        "instance_test.go",
        "kind_test.go",
        "lit_test.go",
        "marshal_test.go",
        "resolve_test.go",
        "rewrite_test.go",
        "subsume_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//cue/ast:go_default_library",
        "//cue/build:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//cue/literal:go_default_library",
        "//cue/parser:go_default_library",
        "//cue/token:go_default_library",
        "//internal:go_default_library",
        "@com_github_cockroachdb_apd_v2//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
