load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cuego.go",
        "doc.go",
    ],
    importpath = "cuelang.org/go/cuego",
    visibility = ["//visibility:public"],
    deps = [
        "//cue:go_default_library",
        "//cue/parser:go_default_library",
        "//internal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cuego_test.go",
        "examples_test.go",
    ],
    embed = [":go_default_library"],
)
