load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "attrs.go",
        "internal.go",
    ],
    importpath = "cuelang.org/go/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//cue/ast:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/literal:go_default_library",
        "//cue/token:go_default_library",
        "@com_github_cockroachdb_apd_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["attrs_test.go"],
    embed = [":go_default_library"],
    deps = ["//cue/token:go_default_library"],
)
