load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "cuelang.org/go/cmd/cue",
    visibility = ["//visibility:private"],
    deps = ["//cmd/cue/cmd:go_default_library"],
)

go_binary(
    name = "cue",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
