load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ast.go",
        "comments.go",
        "ident.go",
        "walk.go",
    ],
    importpath = "cuelang.org/go/cue/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//cue/errors:go_default_library",
        "//cue/token:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ast_test.go",
        "ident_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//cue/format:go_default_library",
        "//cue/parser:go_default_library",
        "//cue/token:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
