load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["errors.go"],
    importpath = "cuelang.org/go/cue/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//cue/token:go_default_library",
        "@com_github_mpvl_unique//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["errors_test.go"],
    embed = [":go_default_library"],
    deps = ["//cue/token:go_default_library"],
)
