load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "string.go",
    ],
    importpath = "cuelang.org/go/cue/literal",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["string_test.go"],
    embed = [":go_default_library"],
)
