load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["scanner.go"],
    importpath = "cuelang.org/go/cue/scanner",
    visibility = ["//visibility:public"],
    deps = ["//cue/token:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["scanner_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//cue/errors:go_default_library",
        "//cue/token:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
