load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "position.go",
        "token.go",
    ],
    importpath = "cuelang.org/go/cue/token",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["position_test.go"],
    embed = [":go_default_library"],
)
