load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "generator.go",
        "templates.go",
    ],
    importpath = "cuelang.org/go/encoding/gocode",
    visibility = ["//visibility:public"],
    deps = [
        "//cue:go_default_library",
        "//cue/errors:go_default_library",
        "//internal:go_default_library",
        "@org_golang_x_tools//go/packages:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "gen_test.go",
        "generator_test.go",
    ],
    # N.B. testdata/ needs to be added to data for generator_test (which reads
    # the directory) and to deps for gen_test (which links pkg1 and pkg2).
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cue:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/load:go_default_library",
        "//encoding/gocode/testdata/pkg1:go_default_library",
        "//encoding/gocode/testdata/pkg2:go_default_library",
        "@com_github_kylelemons_godebug//diff:go_default_library",
    ],
)
