load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constraints.go",
        "decode.go",
        "doc.go",
        "jsonschema.go",
    ],
    importpath = "cuelang.org/go/encoding/jsonschema",
    visibility = ["//visibility:public"],
    deps = [
        "//cue:go_default_library",
        "//cue/ast:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/token:go_default_library",
        "//internal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["decode_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cue:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//encoding/json:go_default_library",
        "//encoding/yaml:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_tools//txtar:go_default_library",
    ],
)
