load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "parse.go",
        "protobuf.go",
        "types.go",
        "util.go",
    ],
    importpath = "cuelang.org/go/encoding/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "//cue/ast:go_default_library",
        "//cue/build:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//cue/load:go_default_library",
        "//cue/parser:go_default_library",
        "//cue/token:go_default_library",
        "//internal/source:go_default_library",
        "@com_github_emicklei_proto//:go_default_library",
        "@com_github_mpvl_unique//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "examples_test.go",
        "protobuf_test.go",
    ],
    data = glob(
        [
            "examples/**",
            "testdata/**",
        ],
    ),
    embed = [":go_default_library"],
    deps = [
        "//cue/ast:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "@com_github_kr_pretty//:go_default_library",
    ],
)
