load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chunker.go",
        "sim.go",
    ],
    importpath = "cuelang.org/go/internal/cuetest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//cmd/cue/cmd:go_default_library",
        "@com_github_kylelemons_godebug//diff:go_default_library",
    ],
)
