load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "print.go",
    ],
    importpath = "cuelang.org/go/internal/diff",
    visibility = ["//:__subpackages__"],
    deps = [
        "//cue:go_default_library",
        "//cue/ast:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["diff_test.go"],
    embed = [":go_default_library"],
    deps = ["//cue:go_default_library"],
)
