load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "big.go",
        "manual.go",
        "math.go",
    ],
    importpath = "cuelang.org/go/pkg/math",
    visibility = ["//visibility:public"],
    deps = [
        "//internal:go_default_library",
        "@com_github_cockroachdb_apd_v2//:go_default_library",
    ],
)
