load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "host.go",
        "ip.go",
    ],
    importpath = "cuelang.org/go/pkg/net",
    visibility = ["//visibility:public"],
    deps = [
        "//cue:go_default_library",
        "@org_golang_x_net//idna:go_default_library",
    ],
)
