load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "manual.go",
        "strconv.go",
    ],
    importpath = "cuelang.org/go/pkg/strconv",
    visibility = ["//visibility:public"],
    deps = ["//cue/literal:go_default_library"],
)
