load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "duration.go",
        "time.go",
    ],
    importpath = "cuelang.org/go/pkg/time",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "duration_test.go",
        "time_test.go",
    ],
    embed = [":go_default_library"],
)
