load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add.go",
        "cmd.go",
        "common.go",
        "custom.go",
        "eval.go",
        "export.go",
        "fix.go",
        "flags.go",
        "fmt.go",
        "get.go",
        "get_go.go",
        "import.go",
        "mod.go",
        "root.go",
        "tags.go",
        "trim.go",
        "version.go",
        "vet.go",
    ],
    importpath = "cuelang.org/go/cmd/cue/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cue:go_default_library",
        "//cue/ast:go_default_library",
        "//cue/ast/astutil:go_default_library",
        "//cue/build:go_default_library",
        "//cue/encoding:go_default_library",
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//cue/literal:go_default_library",
        "//cue/load:go_default_library",
        "//cue/parser:go_default_library",
        "//cue/token:go_default_library",
        "//encoding/json:go_default_library",
        "//encoding/protobuf:go_default_library",
        "//internal:go_default_library",
        "//internal/cli:go_default_library",
        "//internal/diff:go_default_library",
        "//internal/task:go_default_library",
        "//internal/third_party/yaml:go_default_library",
        "//internal/walk:go_default_library",
        "//pkg/encoding/yaml:go_default_library",
        "//pkg/tool/cli:go_default_library",
        "//pkg/tool/exec:go_default_library",
        "//pkg/tool/file:go_default_library",
        "//pkg/tool/http:go_default_library",
        "//pkg/tool/os:go_default_library",
        "//tools/trim:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_text//language:go_default_library",
        "@org_golang_x_text//message:go_default_library",
        "@org_golang_x_tools//go/packages:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "common_test.go",
        "custom_test.go",
        "fix_test.go",
        "get_go_test.go",
        "root_test.go",
        "script_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cue/errors:go_default_library",
        "//cue/format:go_default_library",
        "//cue/parser:go_default_library",
        "//internal/copy:go_default_library",
        "@com_github_rogpeppe_testscript//:go_default_library",
        "@com_github_rogpeppe_testscript//txtar:go_default_library",
    ],
)
